<?xml version="1.0"?>
<package format="3">
  <name>opensw_ros</name>
  <version>0.1.0</version>
  <description>Open driver communicating with SlamTec rpos framework devices such as the M2M1 mapper.</description>

  <maintainer email="marcalban@hatchbed.com">Marc Alban</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>hatchbed_common</depend>
  <depend>opensw</depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
